# veclip

./: .gitignore  CMakeLists.txt  README.md  _clang-format
CMake/: CMakeLists.txt  GitFunctions.cmake
Plugin/: CMakeLists.txt
Plugin/Assets/: CMakeLists.txt
Plugin/Source/: Buffer.cpp  Buffer.h  CMakeLists.txt  Definitions.h  Distroyer.cpp  Distroyer.h  JuceHeader.h  Oversampler.cpp  Oversampler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Structs.h  ThreeBandProcessor.cpp  ThreeBandProcessor.h  TypeDefs.h  UI.cpp  UI.h
Plugin/Source/Core/: CMakeLists.txt  Config.cpp  Config.h  Instance.cpp  Instance.h  PropertiesWrapper.h
Plugin/Source/Core/Parameter/: Handler.cpp  Handler.h  Parameter.cpp  Parameter.h  SetupParameter.cpp
Plugin/Source/Core/State/: InstanceState.cpp  InstanceState.h
Plugin/Source/GUI/: BandUI.cpp  BandUI.h  CMakeLists.txt  LiveLabel.cpp  LiveLabel.h
Plugin/Source/GUI/Components/: BaseComponent.cpp  BaseComponent.h  CMakeLists.txt  Components.h  Knob.cpp  Knob.h  Label.cpp  Label.h  Switch.cpp  Switch.h  VComponent.h
Plugin/Source/GUI/Theme/: CMakeLists.txt  Theme.cpp  Theme.h
Plugin/Source/GUI/Theme/LookAndFeel/: FlatLook.cpp  FlatLook.h  LookHandler.cpp  LookHandler.h  VeNoLook.h
